wip through Leverage

--- a/approved.yaml
+++ b/approved.yaml
@@ -169,6 +169,18 @@ dragonageBR:
   - "Dragon Age RPG (Portuguese)"
   - "AGE System"
 
+#AGAINSST THE DARK YOGI
+againstthedarkyogi:
+  - "Against the Dark Yogi"
+  - "Against the Dark Yogi"
+  - "Against the Dark Yogi"
+
+#ALTERNITY
+alternityrpg:
+  - "Alternity-RPG"
+  - "Alternity"
+  - "Alternity"
+
 #ANIMA
 anima:
   - "Anima-Beyond-Fantasy"
@@ -250,6 +262,11 @@ fellowship:
 ghostlines:
   - "GhostLines"
   - "Ghost Lines"
+  - "Apocalypse World Engine"
+
+impulsedrive:
+  - "Impulse_Drive"
+  - "Impulse Drive"
   - "Apocalypse World Engine"
 
 legacylifeamongruins:
@@ -489,6 +506,12 @@ songoficeandfire:
   - "Song of Ice and Fire Roleplaying"
   - "Chronicle System"
 
+#CLOCKWORK SYSTEM
+tephra:
+  - "Tephra"
+  - "Tephra"
+  - "Clockwork System"
+
 #CONTINUUM
 continuum:
   - "Continuum"
@@ -505,6 +528,11 @@ cops:
 firefly:
   - "Firefly"
   - "Firefly"
+  - "Cortex Plus"
+
+leverage:
+  - "Leverage"
+  - "Leverage"
   - "Cortex Plus"
 
 #CORTEX SYSTEM
@@ -787,6 +815,17 @@ eclipsephasev2:
   - Eclipse Phase V2
   - Eclipse Phase
 
+#END OF THE WORLD
+ffgendoftheworld:
+  - "FFG_End-of-the-World"
+  - "End of the World"
+  - "End of the World"
+
+engineheart:
+  - "EngineHeart"
+  - "Engine Heart"
+  - "Engine Heart"
+
 #FALLOUT
 fallout:
   - "Fallout"
@@ -933,6 +972,13 @@ songsofthedusk:
   - "Songs for the Dusk"
   - "Forged in the Dark"
 
+#FREEFORM UNIVERSAL
+friponeesrpg:
+  - "Friponnes RPG"
+  - "Friponnes (French)"
+  - "Freeform Universal"
+
+
 #FUGUE
 fugue:
   - "Fugue"
@@ -1022,6 +1068,12 @@ hackmaster5e:
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
 
+#HALO MYTHIC
+halomythic:
+  - "Halo_Mythic"
+  - "Halo Mythic"
+  - "Halo Mythic"
+
 #HARN
 harn:
   - "harnmaster"
@@ -1073,11 +1125,17 @@ ironclase:
   - "Ironclaw"
   - "Ironclaw"
 
-#IN NOMINE SATANIS
+#IN NOMINE SATANIS 3rd Edition
 innominesatanis:
   - "INS-MV_3E"
   - "In Nomine Satanis / Magna Veritas Third Edition"
-  - "In Nomine Satanis Third Edition"
+  - "In Nomine Satanis 3rd Edition"
+
+#IN NOMINE SATANIS 5th Edition
+insmv5efr:
+- "INS-MV_5E"
+- "In Nomine Satanis / Magna Veritas 5th Edition (French)"
+- "In Nomine Satanis 5th Edition"
 
 #INTERLOCK SYSTEM
 cyberpunk2020:
@@ -1195,6 +1253,12 @@ theonering:
   - "The One Ring"
   - "The One Ring"
   - "The One Ring"
+
+#OLTREE
+oltreefr:
+  - "Oltree-FR"
+  - "Oltréé! (French)"
+  - "Oltréé"
 
 #PARANOIA
 paranoia:
@@ -1317,6 +1381,12 @@ rolemasterstandard:
   - "Rolemaster Standard System"
   - "Rolemaster Standard System"
 
+#RYUUTAMA
+ryuutama:
+  - "Ryuutama"
+  - "Ryuutama"
+  - "Ryuutama"
+
 #SAGA
 dragonlance:
   - Dragonlance 5th Age
@@ -1405,6 +1475,12 @@ simplesystem:
   - "Simple System"
   - "Simple System"
   - "Simple System"
+
+#SILHOUETTE CORE
+silhouettecore:
+  - "Silhouette_Core"
+  - "Silhouette Core"
+  - "Silhouette Core"
 
 #SPYCRAFT
 spycraft:
@@ -1637,11 +1713,23 @@ taverntales:
   - "Tavern Tales"
   - "Tavern Tales"
 
+#TECHNOIR
+technoir:
+  - "Technoir"
+  - "Technoir"
+  - "Technoir"
+
 #TENRA BANSHO ZERO
 tenrazero:
   - "Tenra Bansho Zero"
   - "Tenra Bansho Zero"
   - "Tenra Bansho Zero"
+
+#TIGRES VOLANtS
+tigresvolants:
+  - "tigres_volants"
+  - "Tigres Volants"
+  - "Tigres Volants"
 
 #TOON
 toon:
@@ -1659,6 +1747,12 @@ torgeternity:
   - "Torg Eternity"
   - "Torg Eternity"
   - "Torg"
+
+#TRI STAT DX
+tristat:
+  - "Tri-Stat"
+  - "Tri-Stat"
+  - "Tri-Stat dX"
 
 #TRUE 20
 true20:
@@ -1693,6 +1787,17 @@ atomichighway:
   - "Atomic Highway"
   - "Atomic Highway"
   - "V6 Engine"
+
+#VAMPIRE THE MASQUERADE 5th EDITION
+vtm5e:
+  - "vampire-v5"
+  - "Vampire: The Masquerade 5th Edition"
+  - "Vampire: The Masquerade 5th Edition"
+
+victoriana2e:
+  - "Victoriana 2ed"
+  - "Victoriana 2nd Edition"
+  - "Victoriana 2nd Edition"
 
 #VOID
 thevoid:
@@ -2223,4 +2328,10 @@ delve:
   - "Delve"
   - "Delve"
   - "Delve"
+  - "hidden"
+
+supersix:
+  - "Supersix"
+  - "Supersix (French)"
+  - "Supersix"
   - "hidden"
