--- a/approved.yaml
+++ b/approved.yaml
@@ -175,6 +175,12 @@ againstthedarkyogi:
   - "Against the Dark Yogi"
   - "Against the Dark Yogi"
 
+#ALIENS COLONIAL MARINES
+aliens:
+  - "Aliens"
+  - "Aliens Colonial Marines"
+  - "Aliens Colonial Marines"
+
 #ALTERNITY
 alternityrpg:
   - "Alternity-RPG"
@@ -186,6 +192,12 @@ anima:
   - "Anima-Beyond-Fantasy"
   - "Anima: Beyond Fantasy"
   - "Anima Beyond Fantasy"
+
+#ANTIKA
+antikafr:
+  - "Antika"
+  - "Antika (French)"
+  - "Antika"
 
 #AMBER DICELESS ROLE-PLAYING
 lordsofgossamerandshadow:
@@ -354,6 +366,12 @@ worldofdungeons:
   - "World of Dungeons"
   - "Apocalypse World Engine"
 
+#ARS MAGICA 5th EDITION
+arsmagica5:
+  - "Ars_Magica_5th"
+  - "Ars Magica: 5th Edition"
+  - "Ars Magica 5th Edition"
+
 #BASIC ROLE-PLAYING
 basicroleplaying:
   - "Basic_Roleplaying"
@@ -445,6 +463,11 @@ stormbringer:
   - "Stormbringer"
   - "Basic Roleplaying System"
 
+bashultimateed:
+  - "BASH Ultimate Edition"
+  - "BASH Ultimate Edition"
+  - "BASH Ultimate Edition"
+
 #BEER ENGINE
 koboldsbaby:
   - "Kobolds Ate My Baby"
@@ -456,6 +479,12 @@ betterangels:
   - "Better-Angels"
   - "Better Angels"
   - "Better Angels"
+
+#BULLETPROOF BLUES
+bulletproofblues:
+  - "Bulletproof Blues"
+  - "Bulletproof Blues"
+  - "Bulletproof Blues"
 
 #BURNING WHEEL
 burningwheel:
@@ -478,6 +507,24 @@ buriedtreasures:
   - "Buried Treasures"
   - "Buried Treasures"
   - "Buried Treasures"
+
+#CAHIERS DU VASTEMONDE
+cahiersduvastemondefr:
+  - "CahiersDuVastemonde"
+  - "Cahiers du Vastemonde"
+  - "Cahiers du Vastemonde"
+
+#CAPESM COWLS, & VILLIANS FOUL
+ccvf:
+  - "Capes, Cowls & Villains Foul"
+  - "Capes, Cowls & Villains Foul"
+  - "Capes, Cowls & Villains Foul"
+
+#CHRIS PERRIN'S MECHA
+chrisperrinsmecha:
+  - "ChrisPerrinsMecha"
+  - "Chris Perrin's Mecha"
+  - "Chris Perrin's Mecha"
 
 #CHRONIQUES OUBLIEES
 chroniquesgalactiques:
@@ -637,6 +684,12 @@ dasschwarzeauge5tsa:
   - "Das Schwarze Auge 5th Edition (Tsa Edition)"
   - "Das Schwarze Auge"
 
+#DEADLANDS CLASSIC
+deadlandsclassic:
+  - "Deadlands Classic"
+  - "Deadlands: Classic"
+  - "Deadlands Classic"
+
 #DEGENESIS
 degenesis:
   - "Degenesis"
@@ -647,6 +700,24 @@ degenesisadvanced:
   - "Degenesis-henry4k"
   - "Degenesis (Advanced)"
   - "Degenesis"
+
+#DIGITAL SHADES
+digitalshades:
+  - "Digital Shades"
+  - "Digital Shades"
+  - "Digital Shades"
+
+#DOGS IN THE VINEYARD
+dogsinthevineyard:
+  - "Dogs-in-the-Vineyard"
+  - "Dogs in the Vineyard"
+  - "Dogs in the Vineyard"
+
+#DRAGON QUESTI
+dragonquest:
+  - "DragonQuest"
+  - "DragonQuest"
+  - "DragonQuest"
 
 #D&D RETROCLONE
 lotfp:
@@ -826,11 +897,22 @@ engineheart:
   - "Engine Heart"
   - "Engine Heart"
 
+#FAIRY TAIL
+fairytail:
+  - "Fairytail"
+  - "Fairy Tail"
+  - "Fairy Tail"
+
 #FALLOUT
 fallout:
   - "Fallout"
   - "Fallout 3.0"
-  - "Fallout"
+  - "Fallout: PNP"
+
+fallout20:
+  - "Fallout (classic_pnp 2)"
+  - "Fallout 2.0"
+  - "Fallout: PNP"
 
 #FANTASY CRAFT
 fantasycraft:
@@ -960,11 +1042,23 @@ fengshui2:
   - "Feng Shui 2"
   - "Feng Shui"
 
+#FINAL FANTASY ROLEPLAYING GAME THIRD EDITION
+ffrpg3rd:
+  - "FFRPG Third Edition"
+  - "Final Fantasy RPG: 3rd Edition"
+  - "Final Fantasy Roleplaying Game 3rd Edition"
+
 #FLASHING BLADES
 flashingblades:
   - "Flashing_Blades"
   - "Flashing Blades"
   - "Flashing Blades"
+
+#FLOW
+stalkerscifirpg:
+  - "Stalker - The SciFi Roleplaying Game"
+  - "Stalker: SciFi Roleplaying Game"
+  - "FLOW"
 
 #FORGED IN THE DARK
 songsofthedusk:
@@ -972,12 +1066,17 @@ songsofthedusk:
   - "Songs for the Dusk"
   - "Forged in the Dark"
 
+#FRAGGED EMPIRE
+fraggedempire:
+  - "Fragged-Empire"
+  - "Fragged Empire"
+  - "Fragged Empire"
+
 #FREEFORM UNIVERSAL
 friponeesrpg:
   - "Friponnes RPG"
   - "Friponnes (French)"
   - "Freeform Universal"
-
 
 #FUGUE
 fugue:
@@ -1023,6 +1122,11 @@ gammaworld7e:
   - "GammaWorld7e"
   - "Gamma World 7th Edition"
   - "Gamma World 7th Edition"
+
+godbound:
+  - "Godbound"
+  - "Godbound"
+  - "Godbound"
 
 #GHOSTBUSTERS
 ghostbusters:
@@ -1091,6 +1195,18 @@ harrypotter:
   - "Harry Potter RPG"
   - "Harry Potter and the Tabletop RPG"
 
+#HAUNTED HOUSE
+hauntedhousees:
+  - "Haunted-House_Spanish"
+  - "Haunted House (Spanish)"
+  - "Haunted House"
+
+#HAWKMOON
+hawkmoon:
+  - "Hawkmoon"
+  - "Hawkmoon"
+  - "Hawkmoon"
+
 #HC SVNT DRACONES
 hcsvntdracones:
   - "Hc Svnt Dracones"
@@ -1133,9 +1249,9 @@ innominesatanis:
 
 #IN NOMINE SATANIS 5th Edition
 insmv5efr:
-- "INS-MV_5E"
-- "In Nomine Satanis / Magna Veritas 5th Edition (French)"
-- "In Nomine Satanis 5th Edition"
+  - "INS-MV_5E"
+  - "In Nomine Satanis / Magna Veritas 5th Edition (French)"
+  - "In Nomine Satanis 5th Edition"
 
 #INTERLOCK SYSTEM
 cyberpunk2020:
@@ -1153,11 +1269,28 @@ kromore:
   - "Kromore"
   - "Kromore"
 
+#LAMES DU CARDINAL
+lamesducardinalfr:
+  - "Lames du Cardinal"
+  - "Lames du Cardinal (French)"
+  - "Lames du Cardinal"
+
 #LES CHANTS DE LOSS
 leschantsdeloss:
   - "Les Chants de Loss"
   - "Les Chants de Loss"
   - "Les Chants de Loss"
+
+magus:
+  - "MAGUS_UTK"
+  - "M.A.G.U.S. - Új Törvénykönyv (Hungarian)"
+  - "M.A.G.U.S."
+
+#LOW FANTASY GAMING
+lowfantasygaming:
+  - "Low Fantasy Gaming"
+  - "Low Fantasy Gaming"
+  - "Low Fantasy Gaming"
 
 #MAID
 maidrpg:
@@ -1260,6 +1393,27 @@ oltreefr:
   - "Oltréé! (French)"
   - "Oltréé"
 
+ova:
+  - "OVA"
+  - "OVA: The Anime RPG"
+  - "OVA: The Anime Role-Playing Game"
+
+#ONE ROLL ENGINE
+nemesis:
+  - "Nemesis"
+  - "Nemesis"
+  - "One-Roll Engine"
+
+monsterschildishthings:
+  - "Monsters and Other Childish Things"
+  - "Monsters and Other Childish Things"
+  - "One-Roll Engine"
+
+wildtalents: 
+  - "Wild Talents 2nd Edition"
+  - "Wild Talents 2nd Edition"
+  - "One-Roll Engine"
+
 #PARANOIA
 paranoia:
   - "Paranoia"
@@ -1336,11 +1490,28 @@ pokemonadventuresunmoon:
   - "Pokemon Tabletop Adventures - Sun & Moon"
   - "Pokemon Tabletop Adventures"
 
+polaris:
+  - "Polaris"
+  - "Polaris"
+  - "Polaris"
+
 #PORTES MONSTRES TRESORS
 portesmonstrestresors:
   - "PortesMonstresTresors"
   - "Portes Monstres Tresors (French)"
   - "Portes Monstres Tresors"
+
+#QIN WARRING STATES
+qinwarringstates:
+  - "Qin Warring States"
+  - "Qin: Warring States"
+  - "Qin, The Warring states"
+
+#REMNANTS
+remnants:
+  - "Remnants"
+  - "Remnants"
+  - "Remnants"
 
 #RENAISSANCE
 cwrenaissance:
@@ -1348,11 +1519,23 @@ cwrenaissance:
   - "Renaissance"
   - "Renaissance"
 
+#REVE DE DRAGON
+revededragonfr:
+  - "Reve de Dragon - french"
+  - "Reve de Dragon (French)"
+  - "Reve de Dragon"
+
 #RISUS SPACE OPERA
 risus: 
   - "Risus Space Opera"
   - "Risus Space Opera"
   - "Risus Space Opera"
+
+#ROLEPLAYING IS MAGIC 4th EDITION
+roleplayingismagic4e:
+  - "RoleplayingIsMagic_4E"
+  - "Roleplaying is Magic: 4th Edition"
+  - "Roleplaying is Magic 4th Edition"
 
 #ROLL AND KEEP SYSTEM
 legendofthefiverings:
@@ -1381,6 +1564,12 @@ rolemasterstandard:
   - "Rolemaster Standard System"
   - "Rolemaster Standard System"
 
+#RWBY TABLETOP SYSTEM
+rwbytabletop:
+  - "RWBY_RoC-Unofficial_Tabletop_RPG"
+  - "The Unofficial RWBY Tabletop System"
+  - "RWBY Tabletop System"
+
 #RYUUTAMA
 ryuutama:
   - "Ryuutama"
@@ -1393,22 +1582,27 @@ dragonlance:
   - "Dragonlance: Fifth Age"
   - "SAGA"
 
-#Sage Machine
-shadowssol:
-  - "Shadows Over Sol"
-  - "Shadows Over Sol"
-  - "Saga Machine"
-
 marvelsaga:
   - "Marvel_Saga"
   - "Marvel Saga"
   - "SAGA"
+
+#SAGA MACHINE
+shadowssol:
+  - "Shadows Over Sol"
+  - "Shadows Over Sol"
+  - "Saga Machine"
 
 #SAVAGE WORLDS
 exo2933:
   - "Exo 2933"
   - "Exo 2933"
   - "Savage Worlds"
+
+krystalfr:
+- "Krystal (FR)"
+- "Krystal (French)"
+- "Savage Worlds"
 
 savageworlds:
   - "SavageWorlds"
@@ -1470,6 +1664,12 @@ newshadowrunanarchy:
   - "Shadowrun Anarchy"
   - "Shadowrun Anarchy"
 
+#SHADOWS OF ESTEREN
+shadowsofesteren:
+  - "Shadows of Esteren"
+  - "Shadows of Esteren"
+  - "Shadows of Esteren"
+
 #SIMPLE SYSTEM
 simplesystem:
   - "Simple System"
@@ -1482,11 +1682,29 @@ silhouettecore:
   - "Silhouette Core"
   - "Silhouette Core"
 
+#SPELL THE RPG
+spelltherpg:
+  - "Spell_the_RPG"
+  - "Spell: the RPG"
+  - "Spell: the RPG"
+
 #SPYCRAFT
 spycraft:
   - "Spycraft_2.0"
   - "Spycraft 2.0"
   - "Spycraft"
+
+#STRAIGHT TO VHS
+straighttovhs:
+  - "StraightToVHS"
+  - "Straight to VHS"
+  - "Straight to VHS"
+
+#STAR TREK
+fasatrek:
+  - "FASATrek"
+  - "FASATrek"
+  - "Star Trek: The Role Playing Game"
 
 #STAR WARS
 sweote:
@@ -1696,6 +1914,11 @@ swordsandwiz:
   - "Swords & Wizardry"
   - "Swords & Wizardry"
 
+terraxfr:
+  - "Terra-X"
+  - "Terra-X (French)"
+  - "Swords & Wizardry"
+
 whitelies:
   - "WhiteLies"
   - "White Lies"
@@ -1748,6 +1971,12 @@ torgeternity:
   - "Torg Eternity"
   - "Torg"
 
+#TRAVEllER 
+classictraveller:
+  - "Classic_Traveller"
+  - "Classic Traveller"
+  - "Traveller"
+
 #TRI STAT DX
 tristat:
   - "Tri-Stat"
@@ -1759,6 +1988,23 @@ true20:
   - "True20"
   - "True20"
   - "True20"
+
+#TWILIGHT 2000
+twilight2000:
+  - "Twilight-2000-v2.2"
+  - "Twilight 2000"
+  - "Twilight 2000"
+
+#UBIQUITY
+hollowearthexpedition:
+  - "HollowEarthExpedition"
+  - "Hollow Earth Expedition"
+  - "Ubiquity"
+
+leagueofadventuresfr:
+  - "LeaguesOfAdventures-fr"
+  - "Leagues of Adventure (French)"
+  - "Ubiquity"
 
 #UNISYSTEM
 allfleshmustbeeaten:
@@ -1777,10 +2023,17 @@ unknownponies:
   - "Unknown Ponies"
   - "Unknown Armies"
 
+#UNKNON ARMIES 2nd EDITION
 unknownarmies:
   - "UnknownArmies"
   - "Unknown Armies 2nd Edition"
-  - "Unknown Armies"
+  - "Unknown Armies 2nd Edition"
+
+#UNKNOWN ARMIES 3rd EDITION
+unknownarmies3e:
+  - "Unknown Armies 3e"
+  - "Unknown Armies 3rd Edition"
+  - "Unknown Armies 3rd Edition"
 
 #V6 ENGINE
 atomichighway:
@@ -1906,12 +2159,6 @@ wfrp4:
   - "Warhammer Fantasy 4th Edition"
   - "Warhammer Fantasy Roleplay"
 
-#WILD TALLENTS
-wildtalents: 
-  - "Wild Talents 2nd Edition"
-  - "Wild Talents 2nd Edition"
-  - "Wild Talents"
-
 #WITCH HUNTER
 witchhunter2e:
   - "Witch_Hunter_2e"
@@ -1948,6 +2195,12 @@ talesfromtheloop:
   - "Tales from the Loop"
   - "Tales from the Loop / TFTF"
   - "Year Zero Engine"
+
+#ZWIHANDER
+zweihandergap:
+  - "Zweihänder Grim & Perilous"
+  - "Zweihänder Grim & Perilous"
+  - "Zweihänder"
 
 #YOGSQUEST
 yogsquest:
@@ -2335,3 +2588,15 @@ supersix:
   - "Supersix (French)"
   - "Supersix"
   - "hidden"
+
+theoneringde:
+  - "Der Eine Ring"
+  - "Der Eine Ring (German)"
+  - "The One Ring"
+  - "hidden"
+
+
+
+
+
+
