wip up to blue planet

--- a/approved.yaml
+++ b/approved.yaml
@@ -372,6 +372,12 @@ arsmagica5:
   - "Ars Magica: 5th Edition"
   - "Ars Magica 5th Edition"
 
+#BASIC FANTASY ROLE-PLAYING GAME
+basicroleplayingexp:
+  - "Basic Fantasy RPG - Expanded"
+  - "Basic Fantasy RPG"
+  - "Basic Fantasy Role-Playing Game"
+
 #BASIC ROLE-PLAYING
 basicroleplaying:
   - "Basic_Roleplaying"
@@ -718,6 +724,11 @@ dragonquest:
   - "DragonQuest"
   - "DragonQuest"
   - "DragonQuest"
+
+dragondeponche2:
+  - "Dragon De Poche 2"
+  - "Dragon De Poche 2 (French)"
+  - "Dragon De Poche"
 
 #D&D RETROCLONE
 lotfp:
@@ -1235,11 +1246,11 @@ iconsassembledfr:
   - "ICONS Assembled (French)"
   - "ICONS"
 
-#IRONCLAW
-ironclase:
-  - "Ironclaw"
-  - "Ironclaw"
-  - "Ironclaw"
+#IMMERSION RPG RULES SYSTEM
+infected:
+  - "Infected!"
+  - "Infected!"
+  - "Immersion RPG Rules System"
 
 #IN NOMINE SATANIS 3rd Edition
 innominesatanis:
@@ -1269,6 +1280,17 @@ kromore:
   - "Kromore"
   - "Kromore"
 
+#IRONCLAW
+ironclase:
+  - "Ironclaw"
+  - "Ironclaw"
+  - "Ironclaw"
+
+knightfr:
+  - "Knight"
+  - "Knight (French)"
+  - "Knight"
+
 #LAMES DU CARDINAL
 lamesducardinalfr:
   - "Lames du Cardinal"
@@ -1285,6 +1307,12 @@ magus:
   - "MAGUS_UTK"
   - "M.A.G.U.S. - Új Törvénykönyv (Hungarian)"
   - "M.A.G.U.S."
+
+#LITTLE FEARS
+littlefearsnightmareed:
+  - "Little-Fears-Nightmare-Edition"
+  - "Little Fears Nightmare Edition"
+  - "Little Fears"
 
 #LOW FANTASY GAMING
 lowfantasygaming:
@@ -1414,6 +1442,11 @@ wildtalents:
   - "Wild Talents 2nd Edition"
   - "One-Roll Engine"
 
+openlegend:
+  - "Open Legend"
+  - "Open Legend"
+  - "Open Legend"
+
 #PARANOIA
 paranoia:
   - "Paranoia"
@@ -1506,6 +1539,11 @@ qinwarringstates:
   - "Qin Warring States"
   - "Qin: Warring States"
   - "Qin, The Warring states"
+
+radiance:
+  - "Radiance"
+  - "Radiance"
+  - "Radiance"
 
 #REMNANTS
 remnants:
@@ -1600,9 +1638,9 @@ exo2933:
   - "Savage Worlds"
 
 krystalfr:
-- "Krystal (FR)"
-- "Krystal (French)"
-- "Savage Worlds"
+  - "Krystal (FR)"
+  - "Krystal (French)"
+  - "Savage Worlds"
 
 savageworlds:
   - "SavageWorlds"
@@ -1930,6 +1968,12 @@ symbaroum:
   - "Symbaroum"
   - "Symbaroum"
 
+#SYNERGY GAME SYSTEM
+blueplanetv2:
+  - "Blue Planet V2"
+  - "Blue Planet"
+  - "Synergy Game System"
+
 #TAVERN TALES
 taverntales:
   - "Tavern-Tales"
@@ -2165,6 +2209,12 @@ witchhunter2e:
   - "Witch Hunter 2nd Edition"
   - "Witch Hunter"
 
+#WURM
+wurm:
+  - "Wurm"
+  - "Wurm, the Ice Age RPG"
+  - "Wurm"
+
 #YEAR ZERO ENGINE
 alienyz:
   - "Alien Roleplaying Game"
@@ -2304,7 +2354,7 @@ thesprawl:
 basicfantasy:
   - "Basic Fantasy RPG"
   - "Basic Fantasy RPG"
-  - "Basic Fantasy RPG"
+  - "Basic Fantasy Role-Playing Game"
   - "hidden"
 
 callofcthulu:
@@ -2593,6 +2643,12 @@ theoneringde:
   - "Der Eine Ring"
   - "Der Eine Ring (German)"
   - "The One Ring"
+  - "hidden"
+
+deadofnight:
+  - "Dead-of-Night"
+  - "Dead of Night"
+  - "Dead of Night 2nd Edition"
   - "hidden"
 
 
