saving progress to delta green

--- a/approved.yaml
+++ b/approved.yaml
@@ -158,6 +158,12 @@ eclipsespanish:
   - "Eclipse (Spanish)"
   - "Archmage Engine"
 
+#ABOREA
+aboreade:
+  - "Aborea"
+  - "Aborea (German)"
+  - "Aborea"
+
 #AGE SYSTEM
 agesystem:
   - "AGE System"
@@ -174,6 +180,12 @@ againstthedarkyogi:
   - "Against the Dark Yogi"
   - "Against the Dark Yogi"
   - "Against the Dark Yogi"
+
+#AGONE
+agonefr:
+  - "Agone-(french)"
+  - "Agone (French)"
+  - "Agone"
 
 #ALIENS COLONIAL MARINES
 aliens:
@@ -372,6 +384,11 @@ arsmagica5:
   - "Ars Magica: 5th Edition"
   - "Ars Magica 5th Edition"
 
+barbariansoflemuriamythic:
+  - "Barbarians Of Lemuria - Mythic"
+  - "Barbarians Of Lemuria: Mythic Edition"
+  - "Barbarians Of Lemuria Mythic Edition"
+
 #BASIC FANTASY ROLE-PLAYING GAME
 basicroleplayingexp:
   - "Basic Fantasy RPG - Expanded"
@@ -434,6 +451,16 @@ cultosinnombrables:
   - "Cultos Innombrables (Spanish)"
   - "Basic Roleplaying System"
 
+deltagreen:
+  - "Delta Green"
+  - "Delta Green"
+  - "Basic Roleplaying System"
+
+drakarochdemoner:
+  - "Drakar och Demoner 6.0"
+  - "Drakar och Demoner 6.0 (Swedish)"
+  - "Basic Roleplaying System"
+
 thelaundry:
   - "The Laundry"
   - "The Laundry"
@@ -469,6 +496,7 @@ stormbringer:
   - "Stormbringer"
   - "Basic Roleplaying System"
 
+#BASH ULTIMATE EDITIOn
 bashultimateed:
   - "BASH Ultimate Edition"
   - "BASH Ultimate Edition"
@@ -485,6 +513,12 @@ betterangels:
   - "Better-Angels"
   - "Better Angels"
   - "Better Angels"
+
+#BRIGANDYNE
+brigandynefr:
+  - "Brigandyne"
+  - "Brigandyne (French)"
+  - "Brigandyne"
 
 #BULLETPROOF BLUES
 bulletproofblues:
@@ -525,6 +559,12 @@ ccvf:
   - "Capes, Cowls & Villains Foul"
   - "Capes, Cowls & Villains Foul"
   - "Capes, Cowls & Villains Foul"
+
+#CHANNEL FEAR
+channelfearfr:
+  - "channel fear"
+  - "Channel Fear (French)"
+  - "Channel Fear"
 
 #CHRIS PERRIN'S MECHA
 chrisperrinsmecha:
@@ -586,6 +626,11 @@ firefly:
 leverage:
   - "Leverage"
   - "Leverage"
+  - "Cortex Plus"
+
+marvelheroicroleplaying:
+  - "Marvel Heroic Roleplaying"
+  - "Marvel Heroic Roleplaying"
   - "Cortex Plus"
 
 #CORTEX SYSTEM
@@ -868,11 +913,21 @@ dcctabbed:
   - "Dungeon Crawl Classics (Tabbed)"
   - "Dungeon Crawl Classics"
 
+mutrantcrawlclassics:
+  - "MCC_Tabbed_Sheet"
+  - "Mutant Crawl Classics"
+  - "Dungeon Crawl Classics"
+
 #DUNGEONS THE DRAGONING
 DtD40000:
   - "Dungeons the Dragoning 40000 7th Edition"
   - "Dungeons the Dragoning 40000 7th Edition"
   - "Dungeons the Dragoning 40000 7th Edition"
+
+dungeonslayers4e:
+  - "Dungeonslayers-4"
+  - "Dungeonslayers: 4th Edition"
+  - "Dungeonslayers 4th Edition"
 
 #DUNGEON SQUAD
 dungeonsquad:
@@ -908,6 +963,12 @@ engineheart:
   - "Engine Heart"
   - "Engine Heart"
 
+#THE FADE
+thefade2:
+  - "The Fade Tabletop 2e Sheet"
+  - "The Fade 2e"
+  - "The Fade"
+
 #FAIRY TAIL
 fairytail:
   - "Fairytail"
@@ -915,14 +976,19 @@ fairytail:
   - "Fairy Tail"
 
 #FALLOUT
+fallout20:
+  - "Fallout (classic_pnp 2)"
+  - "Fallout 2.0"
+  - "Fallout: PNP"
+
 fallout:
   - "Fallout"
   - "Fallout 3.0"
   - "Fallout: PNP"
 
-fallout20:
-  - "Fallout (classic_pnp 2)"
-  - "Fallout 2.0"
+fallout35:
+  - "Fallout 3.5"
+  - "Fallout 3.5"
   - "Fallout: PNP"
 
 #FANTASY CRAFT
@@ -1100,6 +1166,18 @@ psipunk:
   - "Psi-Punk"
   - "The Fugue"
 
+#KULT 3rd EDITION
+kult3e:
+  - "Kult"
+  - "Kult: 3rd Edition"
+  - "Kult 3rd Edition"
+
+#KULT 4th EDITION
+kultdivinitylost:
+  - "Kult Divinity Lost"
+  - "Kult Divinity Lost"
+  - "Kult 4th Edition"
+
 #FUZION
 fuzion:
   - "Fuzion"
@@ -1224,6 +1302,18 @@ hcsvntdracones:
   - "Hc Svnt Dracones"
   - "Hc Svnt Dracones"
 
+#Hellywood
+hellywood:
+  - "Hellywood"
+  - "Hellywood"
+  - "Hellywood"
+
+#HERO KIDS
+herokids:
+  - "Hero Kids"
+  - "Hero Kids"
+  - "Hero Kids"
+
 #HERO QUEST
 heroquest:
   - "HeroQuest"
@@ -1263,6 +1353,17 @@ insmv5efr:
   - "INS-MV_5E"
   - "In Nomine Satanis / Magna Veritas 5th Edition (French)"
   - "In Nomine Satanis 5th Edition"
+
+#INDEX CARD RPG Core 2E
+icrpg:
+  - "ICRPG"
+  - "Index Card RPG"
+  - "INDEX CARD RPG Core 2E"
+
+icrpgwarpshell:
+  - "ICRPG (Warp Shell)"
+  - "Index Card RPG (Warp Shell)"
+  - "INDEX CARD RPG Core 2E"
 
 #INTERLOCK SYSTEM
 cyberpunk2020:
@@ -1320,6 +1421,12 @@ lowfantasygaming:
   - "Low Fantasy Gaming"
   - "Low Fantasy Gaming"
 
+#MACCHIATO MONSTERS
+macchiatomonsters:
+  - "Macchiato Monsters"
+  - "Macchiato Monsters"
+  - "Macchiato Monsters"
+
 #MAID
 maidrpg:
   - "Maid"
@@ -1348,6 +1455,12 @@ palladiumriftsnew:
   - "Palladium Rifts"
   - "Megaversal"
 
+#METAMORPHOSIS ALPHA 1st EDITION
+metamorphosisalphae1:
+  - "MetamorphosisAlpha_1e"
+  - "Metamorphosis Alpha: 1st Edition"
+  - "Metamorphosis Alpha 1st Edition"
+
 #MICROLITE20
 beacon:
   - "Beacon"
@@ -1369,6 +1482,12 @@ spylite:
   - "Spylite"
   - "Microlite20"
 
+#MISTBORN
+mistborn:
+  - "Mistborn"
+  - "Mistborn Adventure Game"
+  - "Mistborn Adventure Game"
+
 #MONGOOSE TRAVELLER
 mongoosetraveller:
   - "Mongoose_Traveller"
@@ -1379,6 +1498,12 @@ mongoosetraveller2e:
   - "Mongoose_Traveller2e"
   - "Mongoose Traveller 2nd Edition"
   - "Mongoose Traveller"
+
+#MOTHERSHIP
+mothership:
+  - "Mothership"
+  - "Mothership"
+  - "Mothership"
 
 #MUTANTS AND MASTERMINDS
 mamm2e:
@@ -1447,6 +1572,11 @@ openlegend:
   - "Open Legend"
   - "Open Legend"
 
+openlegendmin:
+  - "OpenLegend_Minimalist"
+  - "Open Legend (Minimalist)"
+  - "Open Legend"
+
 #PARANOIA
 paranoia:
   - "Paranoia"
@@ -1456,7 +1586,13 @@ paranoia:
 paranoiamongoose:
   - "Paranoia_Mongoose"
   - "Paranoia (Mongoose)"
-  - "Paranoia Mongoose"
+  - "Paranoia Mongoose Edition"
+
+#PATH OF PAPER
+pathofpaper:
+  - "Path of Paper"
+  - "Path of Paper"
+  - "Path of Paper"
 
 #PATHFINDER
 pathfinderneceros:
@@ -1500,6 +1636,12 @@ pendragonfrench:
   - "King Arthur Pendragon (French)"
   - "Pendragon"
 
+#PLANET MERCENARY
+planetmercenary:
+  - "Planet_Mercenary"
+  - "Planet Mercenary"
+  - "Planet Mercenary"
+
 #POKEMON TABLETOP UNITED
 ptu:
   - "PokemonTabletopUnited"
@@ -1534,6 +1676,12 @@ portesmonstrestresors:
   - "Portes Monstres Tresors (French)"
   - "Portes Monstres Tresors"
 
+#PROWLERS & PARAGONS ULTIMATE EDITION
+prowlersandparagons:
+  - "Prowlers-n-Paragons"
+  - "Prowlers & Paragons"
+  - "Prowlers & Paragons Ultimate Edition"
+
 #QIN WARRING STATES
 qinwarringstates:
   - "Qin Warring States"
@@ -1544,6 +1692,11 @@ radiance:
   - "Radiance"
   - "Radiance"
   - "Radiance"
+
+quarts:
+  - "QUARTS"
+  - "Q.U.A.R.T.S."
+  - "QUARTS"
 
 #REMNANTS
 remnants:
@@ -1626,6 +1779,11 @@ marvelsaga:
   - "SAGA"
 
 #SAGA MACHINE
+dimeadventures:
+  - "Dime Adventures"
+  - "Dime Adventures"
+  - "Saga Machine"
+
 shadowssol:
   - "Shadows Over Sol"
   - "Shadows Over Sol"
@@ -1708,17 +1866,29 @@ shadowsofesteren:
   - "Shadows of Esteren"
   - "Shadows of Esteren"
 
+#SILHOUETTE CORE
+silhouettecore:
+  - "Silhouette_Core"
+  - "Silhouette Core"
+  - "Silhouette Core"
+
 #SIMPLE SYSTEM
 simplesystem:
   - "Simple System"
   - "Simple System"
   - "Simple System"
 
-#SILHOUETTE CORE
-silhouettecore:
-  - "Silhouette_Core"
-  - "Silhouette Core"
-  - "Silhouette Core"
+#SPACEMASTER
+cyberspace:
+  - "Cyberspace"
+  - "Cyberspace"
+  - "Spacemaster"
+
+#SPARK RPG 
+sigthecitybetween:
+  - "SIG"
+  - "Sig: The City Between"
+  - "Spark RPG"
 
 #SPELL THE RPG
 spelltherpg:
@@ -1726,17 +1896,35 @@ spelltherpg:
   - "Spell: the RPG"
   - "Spell: the RPG"
 
+#SPLITTERMOND
+splittermond:
+  - "Splittermond"
+  - "Splittermond (German)"
+  - "Splittermond"
+
 #SPYCRAFT
 spycraft:
   - "Spycraft_2.0"
   - "Spycraft 2.0"
   - "Spycraft"
 
+#SOLIPSTRY
+solipstry:
+  - "Solipstry"
+  - "Solipstry"
+  - "Solipstry"
+
 #STRAIGHT TO VHS
 straighttovhs:
   - "StraightToVHS"
   - "Straight to VHS"
   - "Straight to VHS"
+
+#STAR FRONTIERS
+starfrontiers2:
+  - "Star Frontiers 2"
+  - "Star Frontiers"
+  - "Star Frontiers"
 
 #STAR TREK
 fasatrek:
@@ -1974,6 +2162,12 @@ blueplanetv2:
   - "Blue Planet"
   - "Synergy Game System"
 
+#TAILS OF EQUESTRIA
+tailsofequestria:
+  - "TailsOfEquestria"
+  - "Tails of Equestria"
+  - "Tails of Equestria"
+
 #TAVERN TALES
 taverntales:
   - "Tavern-Tales"
@@ -2015,6 +2209,11 @@ torgeternity:
   - "Torg Eternity"
   - "Torg"
 
+topsecret:
+  - "Top Secret"
+  - "Top Secret"
+  - "Top Secret"
+
 #TRAVEllER 
 classictraveller:
   - "Classic_Traveller"
@@ -2025,6 +2224,16 @@ classictraveller:
 tristat:
   - "Tri-Stat"
   - "Tri-Stat"
+  - "Tri-Stat dX"
+
+bigeyessmallmouth3e:
+  - "BESM-3e"
+  - "Big Eyes Small Mouth"
+  - "Tri-Stat dX"
+
+bigeyessmallmouth3esimple:
+  - "BESM3rd"
+  - "Big Eyes Small Mouth: 3rd Edition (Simple)"
   - "Tri-Stat dX"
 
 #TRUE 20
@@ -2078,6 +2287,12 @@ unknownarmies3e:
   - "Unknown Armies 3e"
   - "Unknown Armies 3rd Edition"
   - "Unknown Armies 3rd Edition"
+
+#UREALMS
+animecampaign:
+  - "Anime Campaign"
+  - "Anime Campaign"
+  - "URealms"
 
 #V6 ENGINE
 atomichighway:
@@ -2203,6 +2418,12 @@ wfrp4:
   - "Warhammer Fantasy 4th Edition"
   - "Warhammer Fantasy Roleplay"
 
+#WHAT'S OLD IS NEW
+whatsoldisnew:
+- "WOIN"
+- "What’s O.L.D. is N.E.W."
+- "W.O.I.N"
+
 #WITCH HUNTER
 witchhunter2e:
   - "Witch_Hunter_2e"
@@ -2266,7 +2487,7 @@ arkhamhorror:
 
 #DEPRECATED SHEETS
 #These sheets are no longer selectable in the menu
-#They are usuable by games already have them selected
+#They are usuable by games that already have them selected
 13thage: 
   - 13th_Age
   - "13th Age"
@@ -2651,8 +2872,24 @@ deadofnight:
   - "Dead of Night 2nd Edition"
   - "hidden"
 
+mordiou:
+  - "Mordiou"
+  - "Mordiou ! (French)"
+  - "Mordiou"
+  - "hidden"
 
+spaceninjacybercrisis:
+  - "SpaceNinjaCyberCrisis"
+  - "Space Ninja Cyber Crisis XDO"
+  - "Space Ninja Cyber Crisis XDO"
+  - "hidden"
 
+#THE FADE
+thefade:
+  - "The-Fade-Tabletop"
+  - "The Fade"
+  - "The Fade"
+  - "hidden"
 
 
 
