wip, did Adventures

--- a/approved.yaml
+++ b/approved.yaml
@@ -164,6 +164,18 @@ aboreade:
   - "Aborea (German)"
   - "Aborea"
 
+#ADVENTURES
+aventures:
+  - Aventures
+  - Aventures
+  - Aventures
+
+#ADVENTURE CONQUEROR KING SYSTEM
+acks:
+- "ACKS"
+- "Adventure Conqueror King"
+- "Adventure Conqueror King System"
+
 #AGE SYSTEM
 agesystem:
   - "AGE System"
@@ -378,6 +390,18 @@ worldofdungeons:
   - "World of Dungeons"
   - "Apocalypse World Engine"
 
+#ARCANE CODEX
+arcanecodex:
+  - "ArcaneCodex"
+  - "Arcane Codex"
+  - "Arcane Codex"
+
+#ARCANIST ROLEPLAYING GAME
+asandsh:
+  - AS&SH
+  - "Astonishing Swordsmen & Sorcerers of Hyperborea"
+  - "Arcanis Roleplaying Game"
+
 #ARS MAGICA 5th EDITION
 arsmagica5:
   - "Ars_Magica_5th"
@@ -388,6 +412,12 @@ barbariansoflemuriamythic:
   - "Barbarians Of Lemuria - Mythic"
   - "Barbarians Of Lemuria: Mythic Edition"
   - "Barbarians Of Lemuria Mythic Edition"
+
+#BABYLON 5 2nd EDITION
+babylon5:
+  - "Babylon 5"
+  - "Babylon 5: 2nd Edition"
+  - "Babylon 5 2nd Edition"
 
 #BASIC FANTASY ROLE-PLAYING GAME
 basicroleplayingexp:
@@ -502,6 +532,12 @@ bashultimateed:
   - "BASH Ultimate Edition"
   - "BASH Ultimate Edition"
 
+#BATTLE TECH 4th EDITION
+battletech:
+  - "BattleTech-A-Time-of-War"
+  - "BattleTech: Time of War"
+  - "BattleTech 4th Edition"
+
 #BEER ENGINE
 koboldsbaby:
   - "Kobolds Ate My Baby"
@@ -560,6 +596,12 @@ ccvf:
   - "Capes, Cowls & Villains Foul"
   - "Capes, Cowls & Villains Foul"
 
+#CEPHEUS ENGINE
+cepheusengine:
+  - "Cepheus Engine"
+  - "Cepheus Engine"
+  - "Cepheus Engine"
+
 #CHANNEL FEAR
 channelfearfr:
   - "channel fear"
@@ -605,6 +647,12 @@ tephra:
   - "Tephra"
   - "Clockwork System"
 
+#THE COLD METAL OF THE CERBERUS RINGS
+cerbere:
+  - "Cerbere"
+  - "Le Métal Froid des Anneaux de Cerbère"
+  - "Le Métal Froid des Anneaux de Cerbère"
+
 #CONTINUUM
 continuum:
   - "Continuum"
@@ -623,6 +671,11 @@ firefly:
   - "Firefly"
   - "Cortex Plus"
 
+cortexplusheroic:
+  - "Cortex Plus Heroic"
+  - "Cortex Plus Heroic"
+  - "Cortex Plus"
+
 leverage:
   - "Leverage"
   - "Leverage"
@@ -638,6 +691,24 @@ serenity:
   - "Serenity"
   - "Serenity"
   - "Cortex System"
+
+#CRONICAS
+cronicasrpg:
+  - "Cronicas-RPG"
+  - "Creation of Crônicas"
+  - "Crônicas"
+
+#CTHUULHU DARK
+cthulhudark:
+  - "Cthulhu Dark"
+  - "Cthulhu Dark"
+  - "Cthulhu Dark"
+
+#CYBERPUNK RED
+cyerberpunkredjumpstart:
+  - "Cyberpunk Red"
+  - "Cyberpunk Red"
+  - "Cyberpunk Red"
 
 #CYPHER SYSTEM
 numenera:
@@ -902,6 +973,12 @@ starwars5e:
   - "Star Wars 5e"
   - "Dungeons & Dragons 5th Edition"
 
+#DUNGEONS AND DELVERS
+dungeonsanddelvers:
+  - Dungeons and Delvers
+  - Dungeons and Delvers
+  - Dungeons and Delvers
+
 #DUNGEON CRAWL CLASSICS
 dcc:
   - "DCC"
@@ -934,6 +1011,12 @@ dungeonsquad:
   - "DungeonSquad"
   - "Dungeon Squad"
   - "Dungeon Squad"
+
+#EABA
+endallbeallrpg:
+  - "End All Be All RPG - Roleplaying without Limits"
+  - "End All Be All RPG"
+  - "EABA"
 
 #EARTHDAWN
 earthdawn4e:
@@ -975,6 +1058,12 @@ fairytail:
   - "Fairy Tail"
   - "Fairy Tail"
 
+#FAITH
+faith:
+  - "FAITH"
+  - "FAITH"
+  - "FAITH"
+
 #FALLOUT
 fallout20:
   - "Fallout (classic_pnp 2)"
@@ -990,6 +1079,13 @@ fallout35:
   - "Fallout 3.5"
   - "Fallout 3.5"
   - "Fallout: PNP"
+
+#FANTSTIC HEROES & WITCHERY
+fantasticheros:
+  - "Fantastic Heros & Witchery"
+  - "Fantastic Heroes & Witchery"
+  - "Fantastic Heroes & Witchery"
+
 
 #FANTASY CRAFT
 fantasycraft:
@@ -1228,6 +1324,12 @@ ghostbusterssp:
   - "Ghostbusters (Spanish)"
   - "Ghostbusters"
 
+#GUILDES
+guildesqdo:
+  - "Guildes QdO"
+  - "Guildes"
+  - "Guildes"
+
 #GUMSHOE
 nightblackagents:
   - "Night Black Agents gumshoe"
@@ -1296,13 +1398,19 @@ hawkmoon:
   - "Hawkmoon"
   - "Hawkmoon"
 
+#HAWKMOON MONGOOSE EDITION
+hawkmoonmongoose:
+  - "Hawkmoon_mongoose"
+  - "Hawkmoon (Mongoose)"
+  - "Hawkmoon Mongoose Edition"
+
 #HC SVNT DRACONES
 hcsvntdracones:
   - "Hc Svnt Dracones"
   - "Hc Svnt Dracones"
   - "Hc Svnt Dracones"
 
-#Hellywood
+#ELLYWOOD
 hellywood:
   - "Hellywood"
   - "Hellywood"
@@ -1324,6 +1432,12 @@ heroquestglorantha:
   - Heroquest_Glorantha
   - HeroQuest Glorantha
   - "Hero Quest"
+
+#HONEY HEIST
+honeyheist:
+  - "Honey Heist - Simple"
+  - "Honey Heist"
+  - "Honey Heist"
 
 #ICONS
 iconsassembled:
@@ -1371,15 +1485,27 @@ cyberpunk2020:
   - "Cyberpunk 2020"
   - "Interlock System"
 
+cyberpunk2k20:
+  - "Cyberpunk 2k20"
+  - "Cyberpunk 2k20"
+  - "Interlock System"
+
 cyberpunk2k20v2:
    - "Cyberpunk2k20_v2"
    - "Cyberpunk2k20 (Version 2)"
    - "Interlock System"
 
+#KROMORE
 kromore:
   - "Kromore"
   - "Kromore"
   - "Kromore"
+
+#KURO
+kuro:
+  - "Kuro"
+  - "Kuro"
+  - "Kuro"
 
 #IRONCLAW
 ironclase:
@@ -1414,6 +1540,12 @@ littlefearsnightmareed:
   - "Little-Fears-Nightmare-Edition"
   - "Little Fears Nightmare Edition"
   - "Little Fears"
+
+#LOG HORIZON TRPG
+loghorizon:
+  - "Log Horizon TRPG"
+  - "Log Horizon TRPG"
+  - "Log Horizon TRPG"
 
 #LOW FANTASY GAMING
 lowfantasygaming:
@@ -1499,6 +1631,12 @@ mongoosetraveller2e:
   - "Mongoose Traveller 2nd Edition"
   - "Mongoose Traveller"
 
+#MORDIOU
+mordiou:
+  - "Mordiou"
+  - "Mordiou! (French)"
+  - "Mordiou"
+
 #MOTHERSHIP
 mothership:
   - "Mothership"
@@ -1522,6 +1660,17 @@ myriadsong:
   - "Myriad Song"
   - "Myriad Song"
 
+#MYTHRAS SYSTEM
+mythras:
+  - "Mythras"
+  - "Mythras"
+  - "Mythras"
+
+mspace:
+  - M-Space
+  - M-Space
+  - "Mythras"
+
 #NAHEULBEUK
 naheulbeuk:
   - "Naheulbeuk"
@@ -1534,11 +1683,11 @@ narrativesunlimitedd10:
   - "Narratives Unlimited D10"
   - "Narratives Unlimited D10"
 
-#THE ONE RING
-theonering:
-  - "The One Ring"
-  - "The One Ring"
-  - "The One Ring"
+#OLD DRAGON
+olddragon:
+  - "OldDragon"
+  - "Old Dragon RPG"
+  - "Old Dragon"
 
 #OLTREE
 oltreefr:
@@ -1550,6 +1699,12 @@ ova:
   - "OVA"
   - "OVA: The Anime RPG"
   - "OVA: The Anime Role-Playing Game"
+
+#ONE RING
+theonering:
+  - "The One Ring"
+  - "The One Ring"
+  - "The One Ring"
 
 #ONE ROLL ENGINE
 nemesis:
@@ -1577,6 +1732,12 @@ openlegendmin:
   - "Open Legend (Minimalist)"
   - "Open Legend"
 
+#OUTLAND SYSTEM
+mutantepoch:
+  - "The Mutant Epoch"
+  - "The Mutant Epoch"
+  - "Outland System"
+
 #PARANOIA
 paranoia:
   - "Paranoia"
@@ -1587,6 +1748,12 @@ paranoiamongoose:
   - "Paranoia_Mongoose"
   - "Paranoia (Mongoose)"
   - "Paranoia Mongoose Edition"
+
+#PASTS, PERSONAS, PROFPHECIES
+pastspersonasprophecies:
+  - "Pasts_Personas_Prophecies"
+  - "Pasts, Personas, and Phrophecies"
+  - "Pasts, Personas, and Phrophecies"
 
 #PATH OF PAPER
 pathofpaper:
@@ -1681,6 +1848,12 @@ prowlersandparagons:
   - "Prowlers-n-Paragons"
   - "Prowlers & Paragons"
   - "Prowlers & Paragons Ultimate Edition"
+
+#PSI RUN
+psirun:
+  - "psirun"
+  - "Psi*Run"
+  - "Psi Run"
 
 #QIN WARRING STATES
 qinwarringstates:
@@ -1820,6 +1993,12 @@ savageworldsfo:
   - "Savage Worlds: Fallout"
   - "Savage Worlds"
 
+#SCARLET HEROES
+scarletheroes:
+  - "Scarlet Heros"
+  - "Scarlet Heroes"
+  - "Scarlet Heroes"
+
 #SEVENTH SEA
 7thsea:
   - "7th Sea"
@@ -1830,6 +2009,12 @@ savageworldsfo:
   - "7th Sea 2e"
   - "7th Sea: 2nd Edition"
   - "Seventh Sea 2nd Edition"
+
+#SHAAN RENAISSANCE
+shaantabbed:
+  - "Shaan (tabbed)"
+  - "Shaan Renaissance"
+  - "Shaan Renaissance"
 
 #SHADOW OF THE DEMON LORD
 sotdl:
@@ -1914,12 +2099,6 @@ solipstry:
   - "Solipstry"
   - "Solipstry"
 
-#STRAIGHT TO VHS
-straighttovhs:
-  - "StraightToVHS"
-  - "Straight to VHS"
-  - "Straight to VHS"
-
 #STAR FRONTIERS
 starfrontiers2:
   - "Star Frontiers 2"
@@ -1968,6 +2147,23 @@ otherdust:
   - "Other_Dust"
   - "Other Dust"
   - "Stars Without Number"
+
+#STARFINDER
+starfindersimple:
+  - "Starfinder (simple)"
+  - "Starfinder (Simple)"
+  - "Starfinder"
+
+stargatecoalition:
+  - "Stargate Coalition"
+  - "Stargate Coalition"
+  - "Stargate SG-1: Roleplaying Game"
+
+#STRAIGHT TO VHS
+straighttovhs:
+  - "StraightToVHS"
+  - "Straight to VHS"
+  - "Straight to VHS"
 
 #STRIKE
 strike:
@@ -2191,6 +2387,12 @@ tigresvolants:
   - "tigres_volants"
   - "Tigres Volants"
   - "Tigres Volants"
+
+#TIMELINE SYSTEM
+morrowproject:
+  - "MorrowProject4e"
+  - "Morrow Project"
+  - "TimeLine System"
 
 #TOON
 toon:
@@ -2418,11 +2620,17 @@ wfrp4:
   - "Warhammer Fantasy 4th Edition"
   - "Warhammer Fantasy Roleplay"
 
+#WEAVERDICE
+weaverdice:
+  - "Weaverdice"
+  - "Weaverdice"
+  - "Weaverdice"
+
 #WHAT'S OLD IS NEW
 whatsoldisnew:
-- "WOIN"
-- "What’s O.L.D. is N.E.W."
-- "W.O.I.N"
+  - "WOIN"
+  - "What’s O.L.D. is N.E.W."
+  - "W.O.I.N"
 
 #WITCH HUNTER
 witchhunter2e:
@@ -2872,24 +3080,23 @@ deadofnight:
   - "Dead of Night 2nd Edition"
   - "hidden"
 
-mordiou:
-  - "Mordiou"
-  - "Mordiou ! (French)"
-  - "Mordiou"
-  - "hidden"
-
 spaceninjacybercrisis:
   - "SpaceNinjaCyberCrisis"
   - "Space Ninja Cyber Crisis XDO"
   - "Space Ninja Cyber Crisis XDO"
   - "hidden"
 
-#THE FADE
 thefade:
   - "The-Fade-Tabletop"
   - "The Fade"
   - "The Fade"
   - "hidden"
+
+acpd:
+- "ACPD"
+- "Atlantic City Police Department"
+- "Atlantic City Police Department"
+- "hidden"
 
 
 
